[package]
name = "monitor"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["non_std", "debug"]
non_std = []
no_global_allocator = ["monitor_mod/no_global_allocator"]
debug = ["monitor_mod/debug"]
noverify = ["monitor_mod/noverify"]
verifymodule=["monitor_mod/verifymodule"]

[dependencies]
monitor_mod = {path = "../monitor_mod"}
builtin = { path = "../../tools/verus/source/builtin"}
builtin_macros = { path = "../../tools/verus/source/builtin_macros"}
vstd = {path = "../vstd"}
