[package]
name = "verismo"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Verus deps
builtin = { path = "../../tools/verus/source/builtin"}
builtin_macros = { path = "../../tools/verus/source/builtin_macros"}
vstd = {path = "../vstd"}
# Trusted
trusted = { path = "../trusted"}
hacl-sys = {path = "../../deps/hacl-packages/rust/hacl-sys", features = []}
# Useful macros
verismo_macro = {path = "../verismo_macro"}
verismo_verus = {path = "../verismo_verus"}
paste = "1.0"
seq-macro = "0.3"
vops = {path = "../vops"}

#memoffset = "0.8.0"

[features]
default = ["non_std", "no_global_allocator", "alloc", "test", "debug"]
non_std = []
no_global_allocator = []
test = []
debug = []
noverify = []
verifymodule = []
alloc = []

[package.metadata.rust-analyzer]
rustc_private=true