[package]
name = "verismo_verus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.39"
quote = "1.0"
synstructure = "0.12"
syn = "1.0"
syn_verus = { path="../../tools/verus/dependencies/syn", features = ["full", "visit-mut", "extra-traits"] }
prettyplease_verus = { path="../../tools/verus/dependencies/prettyplease" }
