[package]
name = "vstd"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
state_machines_macros = { path = "../../tools/verus/source/state_machines_macros" }
builtin = { path = "../../tools/verus/source/builtin"}
builtin_macros = { path = "../../tools/verus/source/builtin_macros"}

[lib]
name = "vstd"
path = "src/lib.rs"

[features]
default = ["non_std", "test", "debug", "alloc"]
non_std = []
#no_global_allocator = []
test = []
debug = []
alloc = []