[package]
name = "rust-split"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "1.0"
proc-macro2 = {version = "1.0.39", features = ["span-locations"]}
quote = {version = "1.0"}
# syn = {version = "2.0", features = ["full"]}
syn_verus = { path="../verus/dependencies/syn", features = ["full", "visit", "visit-mut", "extra-traits"] }
prettyplease_verus = { path="../verus/dependencies/prettyplease"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"